[package]
name = "onda-compression"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onda_compression"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
spl-account-compression = { version="0.1.8", features = ["cpi"] }
mpl-token-metadata = { version = "1.9.0", features = ["no-entrypoint"] }
gpl-session = { version = "0.2.0", features = ["no-entrypoint"] }
gpl-core = { version = "1.0.0", features = ["no-entrypoint"] }

