[package]
name = "onda-compression"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onda_compression"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
spl-account-compression = { version="0.2.0", features = ["cpi"] }
mpl-token-metadata = { version = "2.0.0-beta.1", features = ["no-entrypoint"] }
gpl-session = { version = "2.0.0", features = ["no-entrypoint"] }
url = "2.4.0"

